# rkpp_animals_next_task

./: Animals.cpp  Animals.h  CMakeLists.txt  main.cpp
.cache/clangd/index/: Animal.cpp.08E412ACB92D4A79.idx  Animal.cpp.8C85024149240163.idx  Animal.cpp.A84B56B0E1399408.idx  Animal.h.08880291CB3EFDCD.idx  Animal.h.48DA3622799B7C3C.idx  Animal.h.61A63ED92D12D133.idx  Animals.cpp.9E0C6B002B57C92B.idx  Animals.cpp.DC277C50980CA8DC.idx  Animals.h.E1147BC83DBC3979.idx  Animals.h.E51E54EE9B50648C.idx  Cat.cpp.D1E565F83CA10920.idx  Cat.cpp.D7CC35F06E5A5C58.idx  Cat.cpp.DAB77424C761D578.idx  Cat.h.234A1925117F90D9.idx  Cat.h.F010EB9438DE38F2.idx  Cat.h.F32DA3B387585FC7.idx  Dog.cpp.819E67ADF032E464.idx  Dog.cpp.DEA42A595DF86BE1.idx  Dog.cpp.F2ECFCDBEC42C26F.idx  Dog.h.394D545B7B1FB523.idx  Dog.h.733945F5112E58D2.idx  Dog.h.D70024FE097BCB07.idx  Factories.h.18C28627B0DADA83.idx  Factories.h.2CA15B1140223025.idx  Fish.cpp.5B7A6A8CE21206E0.idx  Fish.cpp.6538C4F5BB29CBD2.idx  Fish.cpp.BD4F96FCB88A018F.idx  Fish.h.65282125C6594515.idx  Fish.h.9DA2CFA813321995.idx  Fish.h.A5638E9EDDCCD8BA.idx  Fish.h.BFCA5AB515AC28C4.idx  Owner.cpp.7580F3FC96562F5A.idx  Owner.cpp.8D81B79E09E299D8.idx  Owner.cpp.A733FB7987C3E492.idx  Owner.h.0C351A4A2CDEF2BC.idx  Owner.h.34FABED1486B2422.idx  Owner.h.B5F0CCD7725B2906.idx  Parrot.cpp.5CA18215CC4F1600.idx  Parrot.cpp.C2772D99A239BB85.idx  (+18 more)
include/: Animal.h  Cat.h  Composite.h  Dog.h  Factories.h  Fish.h  Owner.h  Parrot.h  Pig.h
src/: Animal.cpp  Cat.cpp  Dog.cpp  Fish.cpp  Owner.cpp  Parrot.cpp  Pig.cpp  funcs.cpp  main.cpp
